# RT

./: .gitignore  CMakeLists.txt  MAN  Makefile  README.md  RT  author  camera.c  init.c  intersect.c  light.c  main.c  main.c.orig  normal.c  object.c  objects.c  read.c  rtv1  rtv1.h  scene  scene.c  test.h  trace.c  vector.c  window.c
inc/: rt.h  text.h
includes/: rtv1.h
libraries/libmgl/: Makefile
libraries/libmgl/checkbox/: checkbox_check.c  checkbox_create.c  checkbox_draw.c  checkbox_get_data.c  checkbox_set_data.c
libraries/libmgl/color/: convertion_hsv_rgb.c
libraries/libmgl/color_picker/: picker_check.c  picker_create.c  picker_draw.c  picker_get_data_hsv.c  picker_get_data_pos.c  picker_set_data.c
libraries/libmgl/headers/: checkbox.h  color.h  color_picker.h  libmgl.h  screenshot.h  slider.h  ttf.h  window.h
libraries/libmgl/screenshot/: screenshot.c  screenshot_file.c
libraries/libmgl/slider/: slider_create.c  slider_draw.c  slider_set_data.c
libraries/libmgl/ttf/: ttf.c
libraries/libmgl/window/: error.c  pixel.c  window_create.c  window_draw.c  window_update.c
scene/: cone  cut  cylinder  obj.js  p  scene1  scene2  scene3  sphere
src/: bocal.c  camera.c  event.c  get_bocal.c  init.c  interface.c  intersect.c  light.c  light_objects.c  main.c  normal.c  object.c  paraboloid.c  read.c  rot_composed.c  scene.c  sl.c  slice.c  text.c  text1.c  text2.c  text3.c  trace.c  trash.c  vector.c  window.c
